--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -271,6 +271,22 @@ ul {
 			display: grid;
 			grid-template-columns: repeat(6, 1fr);
 			grid-template-rows: repeat(2, 200px);
+
+			.sections {
+				margin-bottom: 24px;
+			}
+
+			h4 {
+				margin-bottom: 12px;
+			}
+
+			a {
+				margin-bottom: 12px;
+			}
+
+			.button {
+				margin-top: 24px;
+			}
 		}
 
 		.locations {
